api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira-clone-api
spec:
  selector:
    app: jira-clone-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
