api/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jira-clone-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: jira-clone-api.mad.itera.no
    http:
      paths:
        - backend:
            serviceName: jira-clone-api
            servicePort: 3000
          path: /
  tls:
  - hosts:
    - jira-clone-api.mad.itera.no
    secretName: jira-clone-api-tls-secret
